2007-01-07  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.h: adding macro DLR_IS_NOT_FINAL() for non-final DLR status mask.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gw/sms.c: fixed wrong length calculation for concatenated
      messages. UDH send always as octets.

2006-12-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.[ch]: fixed warning: inlining failed in call to
      'octstr_convert_printable': function body not available.

2006-12-19  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_emi.c: fix charset re-encoding for OP/53 DLR text.
      Thanks to Vincent for providing a patch.
      [Msg-Id: <2ab401c71669$8afc34b0$9600a8c0@vince>]

2006-12-14 Andreas Fink <andreas at fink.org>
    * gwlib/list.c: fix mutex locking for gwlist_sort. It was using the wrong
      mutex giving deadlocks if you did gwlist_lock(), gwlist_sort(), gwlist_unlock()
      now also unlocking the right mutex if the list length was zero.

2006-12-02  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smpp_pdu.c: moving 'Unknown TLV' output to WARNING for the sake
      of log-file readability. User's may switch to appropriate log-level in
      case their SMPP SMSC uses a lot of vendor-specific TLVs. NLC.
      
2006-12-01  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_emi.c: some updates of references in comments. NLC.
      Thanks to Vincent for providing a patch.
      [Msg-Id: <0ac101c71542$ca5d3780$9600a8c0@vince>]
      
2006-11-29  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.c: fixing case-insensitivity for MIME/HTTP header value
      parameters. Thanks to Paul for patch and Enver for review.
      [Msg-Id: <DEF58FCA-6522-47B6-BACB-8C6A46DE6D4B@dsmagic.com>]  

2006-11-27 Andreas Fink <andreas at fink.org>
    * gwlib/list.c: fix mutex locking for gwlist_sort. It was using the wrong
      mutex giving deadlocks if you did gwlist_lock(), gwlist_sort(), gwlist_unlock()

2006-11-23  Stipe Tolj  <stolj at kannel.org>