@@ -75,6 +75,29 @@
 #include "gwlib/latin1_to_gsm.h"
 
 
+/* This is the extension table defined in GSM 03.38.  It is the mapping
+ * used for the character after a GSM 27 (Escape) character.  All characters
+ * not in the table, as well as characters we can't represent, will map
+ * to themselves.  We cannot represent the euro symbol, which is an escaped
+ * 'e', so we left it out of this table. */
+static const struct {
+    int gsmesc;
+    int latin1;
+} gsm_esctolatin1[] = {
+    {  10, 12 }, /* ASCII page break */
+    {  20, '^' },
+    {  40, '{' },
+    {  41, '}' },
+    {  47, '\\' },
+    {  60, '[' },
+    {  61, '~' },
+    {  62, ']' },
+    {  64, '|' },
+    { 101, 128 },
+    { -1, -1 }
+};
+
+
 /**
  * Struct maps escaped GSM chars to unicode codeposition.
  */
@@ -94,6 +117,33 @@ static const struct {
     { 'e', 0x20AC },  /* euro symbol */
     { -1, -1 }
 };
+
+
+/* Map GSM default alphabet characters to ISO-Latin-1 characters.
+ * The greek characters at positions 16 and 18 through 26 are not
+ * mappable.  They are mapped to '?' characters.
+ * The escape character, at position 27, is mapped to a space,
+ * though normally the function that indexes into this table will
+ * treat it specially. */
+static const unsigned char gsm_to_latin1[128] = {
+     '@', 0xa3,  '$', 0xa5, 0xe8, 0xe9, 0xf9, 0xec,   /* 0 - 7 */
+    0xf2, 0xc7,   10, 0xd8, 0xf8,   13, 0xc5, 0xe5,   /* 8 - 15 */
+     '?',  '_',  '?',  '?',  '?',  '?',  '?',  '?',   /* 16 - 23 */
+         '?',  '?',  '?',  ' ', 0xc6, 0xe6, 0xdf, 0xc9,   /* 24 - 31 */
+     ' ',  '!',  '"',  '#', 0xa4,  '%',  '&', '\'',   /* 32 - 39 */
+     '(',  ')',  '*',  '+',  ',',  '-',  '.',  '/',   /* 40 - 47 */
+     '0',  '1',  '2',  '3',  '4',  '5',  '6',  '7',   /* 48 - 55 */
+     '8',  '9',  ':',  ';',  '<',  '=',  '>',  '?',   /* 56 - 63 */
+        0xa1,  'A',  'B',  'C',  'D',  'E',  'F',  'G',   /* 64 - 71 */
+         'H',  'I',  'J',  'K',  'L',  'M',  'N',  'O',   /* 73 - 79 */
+         'P',  'Q',  'R',  'S',  'T',  'U',  'V',  'W',   /* 80 - 87 */
+         'X',  'Y',  'Z', 0xc4, 0xd6, 0xd1, 0xdc, 0xa7,   /* 88 - 95 */
+        0xbf,  'a',  'b',  'c',  'd',  'e',  'f',  'g',   /* 96 - 103 */
+         'h',  'i',  'j',  'k',  'l',  'm',  'n',  'o',   /* 104 - 111 */
+         'p',  'q',  'r',  's',  't',  'u',  'v',  'w',   /* 112 - 119 */
+         'x',  'y',  'z', 0xe4, 0xf6, 0xf1, 0xfc, 0xe0    /* 120 - 127 */
+};
+
 
 /** 
  * Map GSM default alphabet characters to unicode codeposition.
@@ -337,6 +387,68 @@ void charset_utf8_to_gsm(Octstr *ostr)
     octstr_append(ostr, newostr);
     octstr_destroy(newostr);
 }
+
+
+void charset_gsm_to_latin1(Octstr *ostr)
+{
+    long pos, len;
+
+    len = octstr_len(ostr);
+    for (pos = 0; pos < len; pos++) {
+    int c, new, i;
+
+    c = octstr_get_char(ostr, pos);
+    if (c == 27 && pos + 1 < len) {
+        /* GSM escape code.  Delete it, then process the next
+             * character specially. */
+        octstr_delete(ostr, pos, 1);
+        len--;
+        c = octstr_get_char(ostr, pos);
+        for (i = 0; gsm_esctolatin1[i].gsmesc >= 0; i++) {
+        if (gsm_esctolatin1[i].gsmesc == c)
+            break;
+        }
+        if (gsm_esctolatin1[i].gsmesc == c)
+        new = gsm_esctolatin1[i].latin1;
+        else if (c < 128)
+        new = gsm_to_latin1[c];
+        else
+        continue;
+    } else if (c < 128) {
+            new = gsm_to_latin1[c];
+    } else {
+        continue;
+    }
+    if (new != c)
+        octstr_set_char(ostr, pos, new);
+    }
+}
+
+
+void charset_latin1_to_gsm(Octstr *ostr)
+{
+    long pos, len;
+    int c, new;
+    unsigned char esc = 27;
+
+    len = octstr_len(ostr);
+    for (pos = 0; pos < len; pos++) {
+    c = octstr_get_char(ostr, pos);
+    gw_assert(c >= 0);
+    gw_assert(c <= 256);
+    new = latin1_to_gsm[c];
+    if (new < 0) {
+         /* Escaped GSM code */
+        octstr_insert_data(ostr, pos, &esc, 1);
+        pos++;
+        len++;
+        new = -new;
+    }
+    if (new != c)
+        octstr_set_char(ostr, pos, new);
+    }
+}
+
 
 /*
  * This function is a wrapper arround charset_latin1_to_gsm()
